# HyprMenu

./: .gitignore  HYPRLAND_BLUR_CONFIGURATION.md  PKGBUILD  README.md  build.sh  cleanup.sh  flake.nix  install.sh  launch-hyprmenu.sh  meson.build  pin_app.sh  rebuild-plan.md  result  run.sh  uninstall.sh
.config/hyprmenu/: hyprmenu.conf
data/: hyprmenu.conf  org.hyprmenu.desktop
src/: app_entry.c  app_entry.h  app_grid.c  app_grid.h  category_list.c  category_list.h  config.c  config.h  css_generator.c  hyprland.c  hyprland.h  list_view.c  list_view.h  main.c  pinned_apps.c  pinned_apps.h  recent_apps.c  recent_apps.h  theme.c  window.c  window.h
